# algebra-circuit-solver

./: pyproject.toml
src/: circuit.py  elements.py
tests/: test_algebra_circuit_solver.py
