[tool.poetry]
name = "algebra-circuit-solver"
version = "0.1.0"
description = ""
authors = ["Federico Santana <fede.santana@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sympy = "^1.8"
mypy = "^0.910"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
